0.12 - 

Make GTop object fully clone-able under threaded perl and threaded
mod_perl 2.0, by using the CLONE function. [Stas]

deploy PERL_NO_GET_CONTEXT macro in .xs modules for better efficiency,
adjust the code to pass THX around [Stas]

add debug printout of INC and LIBS [Stas]

restore the default LIBS setting removed in 0.11 (suitable for gtop1),
since not all platforms have the config script
(gnome-config/pkg-config) which tells us which libs to use [Stas]

fix "modification of readonly value" which triggered by s/:\w+$//
trying to modify $_ which points to a constant in the autogenerated
test.gtop [Eric Cholet]

declare static variable glibtop_server_config as extern so it'll
compile on MacOSX [Eric Cholet]

tracing is now possible with threaded perls [Stas]

libgtop sources are now can be found at
http://ftp.gnome.org/pub/gnome/sources/libgtop/ [Stas]

0.11 - Jan 27, 2003

Add support to libgtop 2.0 and automate the picking of the right libraries
and include paths. [Stas Bekman]

Backport GTop to perl 5.005_03 using ppport.h [Stas Bekman]

0.10 - January 31, 2000

XS_GTop_field_##type didnt work under solaris, 
Makefile.PL will now generate working code

various GTop::Server fixups

0.09 - November 28, 1999

GTop->new now accepts option host,port args for talking to a
GTop::Server

added new GTop::Server module (see examples/server)

plugged a few potential memory leaks

0.08 - November 16, 1999

added proc_uid interface

added proc_args interface (see examples/proclist)

added proclist method and proc_state interface (see examples/proclist)

0.07 - November 10, 1999

added $ENV{GTOP_LIB} and $ENV{GTOP_INCLUDE} options in Makefile.PL

added GTop::size_string function

0.06 - October 14, 1999

added uptime and loadavg interfaces

corrected generated test and docs for several methods (had too many args)

added GTop::Netload::address_string method

0.05 - October 4, 1999

malloc/free glibtop_* objects instead of using a glibtop_union

0.04 - October 4, 1999
